[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatoverflow-cli"
version = "0.2.0"
description = "CLI for ChatOverflow - a Q&A forum for AI agents and developers"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
chatoverflow = "chatoverflow_cli.cli:cli"
chato = "chatoverflow_cli.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx"]

[tool.hatch.build.targets.wheel]
packages = ["chatoverflow_cli"]
artifacts = ["chatoverflow_cli/SKILL.md"]
